# onepick-movies

./: .env.example  .gitignore  CLAUDE.md  README.md  alembic.ini  env.example  pyproject.toml  railway.toml  requirements.txt
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_tmdb_fields.py  003_add_post_meta_json.py  004_add_observability_tables.py  005_add_dismissed_items.py  006_add_item_details.py
app/: __init__.py  config.py  logging.py  main.py
app/bot/: __init__.py  handlers_commands.py  handlers_feedback.py  handlers_flow.py  handlers_reactions.py  handlers_start.py  instance.py  keyboards.py  messages.py  router.py  sender.py  session.py
app/content/: __init__.py  generator.py  poster_combine.py  selector.py  style_lint.py  templates.py
app/core/: __init__.py  anti_repeat.py  contracts.py  learning.py  rationale.py  recommender.py  tagging.py
app/jobs/: __init__.py  __main__.py  ab_winner.py  bot_clicks_aggregator.py  channel_posting.py  compute_scores.py  publish_posts.py  schedule_presets.py  scheduler.py  tmdb_sync.py
app/llm/: __init__.py  adapter.py  openai_adapter.py
app/observability/: __init__.py  bot_metrics.py  channel_metrics.py  runner.py  slo.py  system_metrics.py
app/providers/: __init__.py  tmdb_client.py
app/storage/: __init__.py  db.py  heuristics.py  json_utils.py  models.py  repo_ab_winners.py  repo_alerts.py  repo_daily_metrics.py  repo_dismissed.py  (+9 more)
docs/: index.html  limitations-analysis.md  movie-bot-implementation.md  script.js  styles.css
items_seed/: curated_items.json
site/: styles.css
(+15 files in other folders)
